--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -6,6 +6,7 @@
     "next": "Next",
     "back": "Back",
     "close": "Close",
+    "abort": "Abort",
     "table": {
       "pagination": {
         "items_per_page": {
@@ -208,7 +209,7 @@
     "sweep_amount_breakdown_frozen_balance": "Frozen or locked balance",
     "sweep_amount_breakdown_estimated_amount": "Estimated amount to be sent",
     "sweep_amount_breakdown_explanation": "A sweep transaction will consume all UTXOs of a mixdepth leaving no coins behind except those that have been <1>frozen</1> or <3>time-locked</3>. Onchain transaction fees and market maker fees will be deducted from the amount so as to leave zero change. The exact transaction amount can only be calculated by JoinMarket at the point when the transaction is made. Therefore the estimated amount shown might deviate from the actually sent amount. Refer to the <5>JoinMarket documentation</5> for more details.",
-    "confirm_modal": {
+    "confirm_send_modal": {
       "title": "Confirm payment",
       "label_amount": "Amount",
       "text_sweep_balance": "Sweep whole jar (<1></1>)",
@@ -219,6 +220,10 @@
       "label_num_collaborators": "Collaborators",
       "text_collaborative_tx_enabled": "Payment with privacy improvement",
       "text_collaborative_tx_disabled": "Payment without privacy improvement"
+    },
+    "confirm_abort_modal": {
+      "title": "Abort payment",
+      "text_body": "Are you sure you want to abort the collaborative transaction?"
     },
     "coinjoin_precondition": {
       "hint_missing_utxos": "To execute a collaborative transaction you need UTXOs with {{ minConfirmations }} or more confirmations in the source jar. $t(send.coinjoin_precondition.nested_hint_fund_jar, {\"count\": {{ minConfirmations }} })",
