--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -181,14 +181,17 @@
       "description_tx_fees_satspervbyte": "The fee in satoshi per vbyte used to pay for transactions. A transaction without privacy improvements with one input and two outputs is about 250 bytes, a collaborative transaction can be a multiple of that depending on the number of collaborators and their inputs.",
       "feedback_invalid_tx_fees_blocks": "Please provide a valid block target between {{ min }} and {{ max }}.",
       "feedback_invalid_tx_fees_satspervbyte": "Please provide a valid transaction fee in sats/vByte between {{ min }} and {{ max }}.",
+      "label_tx_fees_factor": "Fee randomization",
+      "description_tx_fees_factor": "Rate variance randomization around the transaction fee. If you set your fee target to 10 sats/vbyte and the factor to 30%, it might use any value between 7 and 13 sats/vbyte for your transactions. Default is 20%.",
+      "feedback_invalid_tx_fees_factor": "Please provide a valid fee randomization value between {{ min }} and {{ max }}.",
       "title_max_cj_fee_settings": "Collaborative transaction fee limits",
       "subtitle_max_cj_fee": "Both limits given in this section, relative and absolute, must be exceeded in order to not consider a certain offer.",
       "label_max_cj_fee_abs": "Maximum absolute fee",
-      "description_max_cj_fee_abs": "Maximum absolute collaborative transaction fee in satoshi to pay to a single market maker for a transaction. e.g. if your max amount is 30 000 sats and you choose 9 makers, the maximum fee allowed would be 270 000 satoshi (0.0027 BTC).",
+      "description_max_cj_fee_abs": "Maximum absolute collaborative transaction fee in satoshi to pay to a single market maker for a transaction. e.g. if your max amount is 30 000 sats and you choose 9 makers, the maximum fee allowed would be 270 000 sats (0.0027 BTC).",
       "feedback_invalid_max_cj_fee_abs": "Please provide a valid maximum relative fee",
       "label_max_cj_fee_rel": "Maximum relative fee {{ fee }}",
-      "description_max_cj_fee_rel": "Maximum relative collaborative transaction fee, in fractions of the value. e.g. if your amount is 2 BTC (200 million satoshi) and fee is 0.1%, the maximum fee allowed would be 0.002 BTC (200 000 satoshi).",
-      "feedback_invalid_max_cj_fee_rel": "Please provide a valid maximum relative fee",
+      "description_max_cj_fee_rel": "Maximum relative collaborative transaction fee, in fractions of the value. e.g. if your amount is 2 BTC (200 million sats) and fee is 0.1%, the maximum fee allowed would be 0.002 BTC (200 000 sats).",
+      "feedback_invalid_max_cj_fee_rel": "Please provide a valid maximum relative fee between {{ min }} and {{ max }}.",
       "text_button_cancel": "Cancel",
       "text_button_submit": "Save",
       "text_button_submitting": "Saving...",
